Change Menu Name

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div class=btn-group" style="text-align: center;">
             <a class="btn btn-large AClick" href="#section-1">About Us</a>
             <a class="btn btn-large AClick" href="#section-2">Contact Us</a>
-            <a class="btn btn-large AClick" href="#section-3">Product</a>
-            <a class="btn btn-large AClick" href="#section-4">Download</a>
+            <a class="btn btn-large AClick" href="#section-3">Blog</a>
+            <a class="btn btn-large AClick" href="#section-4">Portfolio</a>
             </div>
         </div>
         <div class="container">
